# libcamera-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  Cargo.toml  Dockerfile.check  Makefile  README.md  build.rs  canary.py  prek.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml  release.yml
c-api/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  configuration.cpp  configuration.h  controls.cpp  controls.h  frame_buffer.cpp  frame_buffer.h  internal.h  libcamera.h  request.cpp  request.h  stream.cpp  stream.h  types.h
docs/: CONTAINER.md  CONTROLS.md
examples/: capture.rs  controls.rs  list_cameras.rs
skills/shiguredo-libcamera/: SKILL.md
src/: allocator.rs  camera.rs  camera_manager.rs  configuration.rs  control_ids.rs  controls.rs  error.rs  frame_buffer.rs  geometry.rs  lib.rs  pixel_format.rs  property_ids.rs  request.rs  stream.rs
sysroot/: raspberry-pi-os_armv8.json
