[package]
name = "shiguredo_libcamera"
version = "2026.1.0-canary.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Rust bindings for libcamera"
homepage = "https://github.com/shiguredo/libcamera-rs"
repository = "https://github.com/shiguredo/libcamera-rs"
readme = "README.md"
links = "libcamera_c"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.72"
cc = "1"
pkg-config = "0.3"

[dev-dependencies]
nojson = "0.3"
