[package]
name = "shiguredo_libcamera"
version = "2026.1.0"
edition = "2024"
rust-version = "1.88"
description = "Rust bindings for libcamera"
readme = "README.md"
homepage = "https://github.com/shiguredo/libcamera-rs"
repository = "https://github.com/shiguredo/libcamera-rs"
license = "Apache-2.0"
links = "libcamera_c"
include = ["/build.rs", "/c-api/*", "/src/**/*", "LICENSE", "README.md"]

[dependencies]

[dev-dependencies]
nojson = "0.3"

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
pkg-config = "0.3"
